<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".main.MainActivity">
  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/start_line"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.05"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintStart_toStartOf="parent" />
  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/end_line"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.95"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintStart_toStartOf="parent" />
  <com.google.android.material.button.MaterialButton
    android:id="@+id/start_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/start_button"
    android:textColor="@color/white"
    android:textSize="40sp"
    app:layout_constraintBottom_toTopOf="@id/stop_button"
    app:layout_constraintEnd_toEndOf="@id/end_line"
    app:layout_constraintLeft_toLeftOf="@id/start_line"
    app:layout_constraintRight_toRightOf="@id/end_line"
    app:layout_constraintStart_toStartOf="@id/start_line"
    app:layout_constraintTop_toBottomOf="@id/coin_min_input" />
  <com.google.android.material.button.MaterialButton
    android:id="@+id/stop_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/stop_button"
    android:textColor="@color/white"
    android:textSize="40sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@id/end_line"
    app:layout_constraintLeft_toLeftOf="@id/start_line"
    app:layout_constraintRight_toRightOf="@id/end_line"
    app:layout_constraintStart_toStartOf="@id/start_line"
    app:layout_constraintTop_toBottomOf="@id/start_button" />
  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/coin_max_input"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/coin_max"
    app:endIconMode="clear_text"
    app:helperText="@string/helper_message"
    app:helperTextEnabled="true"
    app:layout_constraintBottom_toTopOf="@id/coin_min_input"
    app:layout_constraintEnd_toEndOf="@id/end_line"
    app:layout_constraintLeft_toLeftOf="@id/start_line"
    app:layout_constraintRight_toRightOf="@id/end_line"
    app:layout_constraintStart_toStartOf="@id/start_line"
    app:layout_constraintTop_toBottomOf="@id/coin_selector">
    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/coin_max"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#000000"
      android:inputType="numberDecimal" />
  </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/coin_min_input"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/coin_min"
    app:endIconMode="clear_text"
    app:helperText="@string/helper_message"
    app:helperTextEnabled="true"
    app:layout_constraintBottom_toBottomOf="@id/start_button"
    app:layout_constraintEnd_toEndOf="@id/end_line"
    app:layout_constraintLeft_toLeftOf="@id/start_line"
    app:layout_constraintRight_toRightOf="@id/end_line"
    app:layout_constraintStart_toStartOf="@id/start_line"
    app:layout_constraintTop_toBottomOf="@id/coin_max_input">
    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/coin_min"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#000000"
      android:inputType="numberDecimal" />
  </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/coin_selector"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/coin_select"
    app:layout_constraintBottom_toTopOf="@id/coin_max_input"
    app:layout_constraintEnd_toEndOf="@id/end_line"
    app:layout_constraintLeft_toLeftOf="@id/start_line"
    app:layout_constraintRight_toRightOf="@id/end_line"
    app:layout_constraintStart_toStartOf="@id/start_line"
    app:layout_constraintTop_toTopOf="parent">
    <AutoCompleteTextView
      android:id="@+id/coin_spinner"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:inputType="text"
      tools:ignore="LabelFor" />
  </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>